service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-app
spec:
  selector:
    app: angular-app
  ports:
  - name: frontend
    port: 80
    targetPort: 80
  type: NodePort
