ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: suhil.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angular-app
            port:
              name: http
